--- a/front/src/app/components/private/admin/components/generate-credit-request/generate-credit-request.component.html
+++ b/front/src/app/components/private/admin/components/generate-credit-request/generate-credit-request.component.html
@@ -1,1 +1,1 @@
-<button (click)="generateExcel()">Generar Solicitud de Crédito</button>
+<button class="btn btn-primary btn-sm" (click)="generateExcel()">Generar</button>
