Add user full name in credit request

--- a/front/src/app/components/private/admin/components/credit-requests/credit-requests.component.html
+++ b/front/src/app/components/private/admin/components/credit-requests/credit-requests.component.html
@@ -42,7 +42,7 @@
             [reestructurado]="request.reestructurado"
             [periocidadPago]="request.periocidadPago"
             [tasaInteres]="request.tasaInteres"
-            [nombreAsociado]="request.nombreAsociado"
+            [userId]="request.idUsuario"
           ></app-generate-credit-request>
         </td>
       </tr>
