--- a/front/src/app/components/private/user/components/user-info/components/natural-person/natural-person.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/natural-person/natural-person.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 <form [formGroup]="natPersonForm" (ngSubmit)="onSubmit()">
   <input type="hidden" formControlName="id" />
   <h5>Información Personal</h5>
@@ -7,6 +8,7 @@
         <div class="col-md-6">
           <label for="idGenero" class="form-label">Género</label>
           <select class="form-select" formControlName="idGenero">
+            <option value="" selected>Seleccione...</option>
             <option *ngFor="let type of genders" [value]="type.id">
               {{ type.nombre }}
             </option>
@@ -15,6 +17,7 @@
         <div class="col-md-6">
           <label for="idEstadoCivil" class="form-label">Estado Civil</label>
           <select class="form-select" formControlName="idEstadoCivil">
+            <option value="" selected>Seleccione...</option>
             <option *ngFor="let type of maritalStatus" [value]="type.id">
               {{ type.nombre }}
             </option>
@@ -26,8 +29,8 @@
         </div>
         <div class="col-md-6">
           <label for="departamentoExpDoc" class="form-label">Departamento de expedición del documento</label>
-          <select id="departamentoExpDoc" formControlName="departamentoExpDoc" (change)="onDepartamentoChange('departamentoExpDoc')">
-            <option value="">Seleccione un departamento</option>
+          <select class="form-select" id="departamentoExpDoc" formControlName="departamentoExpDoc" (change)="onDepartamentoChange('departamentoExpDoc')">
+            <option value="" selected>Seleccione...</option>
             <option *ngFor="let department of departments" [value]="department.id">
               {{ department.nombre }}
             </option>
@@ -35,8 +38,8 @@
         </div>
         <div class="col-md-6">
           <label for="mpioExpDoc" class="form-label">Municipio de expedición del documento</label>
-          <select id="mpioExpDoc" formControlName="mpioExpDoc">
-            <option value="">Seleccione un municipio</option>
+          <select class="form-select" id="mpioExpDoc" formControlName="mpioExpDoc">
+            <option value="" selected>Seleccione...</option>
             <option *ngFor="let city of citiesExpDoc" [value]="city.id">
               {{ city.nombre }}
             </option>
@@ -55,7 +58,8 @@
         </div>
         <div class="col-md-6">
           <label for="paisNacimiento" class="form-label">País de nacimiento</label>
-          <select class="form-select" formControlName="paisNacimiento">
+          <select class="form-select" formControlName="paisNacimiento" (change)="onPaisNacimientoChange()">
+            <option value="" selected>Seleccione...</option>
             <option *ngFor="let type of countries" [value]="type.id">
               {{ type.nombre }}
             </option>
@@ -64,6 +68,7 @@
         <div class="col-md-6">
           <label for="departamentoNacimiento" class="form-label">Departamento de nacimiento</label>
           <select class="form-select" formControlName="departamentoNacimiento" (change)="onDepartamentoChange('departamentoNacimiento')">
+            <option value="" selected>Seleccione...</option>
             <option *ngFor="let dpto of departments" [value]="dpto.id">
               {{ dpto.nombre }}
             </option>
@@ -71,7 +76,8 @@
         </div>
         <div class="col-md-6">
           <label for="mpioNacimiento" class="form-label">Municipio de nacimiento</label>
-          <select class="form-select" formControlName="mpioNacimiento">
+          <select class="form-select" formControlName="mpioNacimiento" (change)="onSelectChange($event)">
+            <option value="" selected>Seleccione...</option>
             <option *ngFor="let city of citiesNac" [value]="city.id">
               {{ city.nombre }}
             </option>
@@ -79,7 +85,7 @@
         </div>
         <div class="col-md-6">
           <label for="otroLugarNacimiento" class="form-label">Lugar de nacimiento</label>
-          <input formControlName="otroLugarNacimiento" type="text" class="form-control" />
+          <input formControlName="otroLugarNacimiento" type="text" class="form-control"/>
         </div>
       </div>
     </div>
@@ -91,6 +97,7 @@
         <div class="col-md-6">
           <label for="departamentoResidencia" class="form-label">Departamento de residencia</label>
           <select class="form-select" formControlName="departamentoResidencia" (change)="onDepartamentoChange('departamentoResidencia')">
+            <option value="" selected>Seleccione...</option>
             <option *ngFor="let dpto of departments" [value]="dpto.id">
               {{ dpto.nombre }}
             </option>
@@ -99,6 +106,7 @@
         <div class="col-md-6">
           <label for="mpioResidencia" class="form-label">Municipio de residencia</label>
           <select class="form-select" formControlName="mpioResidencia">
+            <option value="" selected>Seleccione...</option>
             <option *ngFor="let city of citiesRes" [value]="city.id">
               {{ city.nombre }}
             </option>
@@ -107,6 +115,7 @@
         <div class="col-md-6">
           <label for="idZonaResidencia" class="form-label">Zona de residencia</label>
           <select class="form-select" formControlName="idZonaResidencia">
+            <option value="" selected>Seleccione...</option>
             <option *ngFor="let type of zones" [value]="type.id">
               {{ type.nombre }}
             </option>
@@ -115,6 +124,7 @@
         <div class="col-md-6">
           <label for="idTipoVivienda" class="form-label">Tipo de vivienda de residencia</label>
           <select class="form-select" formControlName="idTipoVivienda">
+            <option value="" selected>Seleccione...</option>
             <option *ngFor="let type of houseTypes" [value]="type.id">
               {{ type.nombre }}
             </option>
@@ -123,6 +133,7 @@
         <div class="col-md-6">
           <label for="estrato" class="form-label">Estrato</label>
           <select class="form-select" formControlName="estrato">
+            <option value="" selected>Seleccione...</option>
             <option value="1">Estrato 1</option>
             <option value="2">Estrato 2</option>
             <option value="3">Estrato 3</option>
@@ -149,6 +160,7 @@
         <div class="col-md-6">
           <label for="cabezaFamilia" class="form-label">¿Es cabeza de familia?</label>
           <select class="form-select" formControlName="cabezaFamilia">
+            <option value="" selected>Seleccione...</option>
             <option value="SI">Sí</option>
             <option value="NO">No</option>
           </select>
@@ -160,6 +172,7 @@
         <div class="col-md-6">
           <label for="tieneHijos" class="form-label">¿Tiene hijos?</label>
           <select class="form-select" formControlName="tieneHijos">
+            <option value="" selected>Seleccione...</option>
             <option value="SI">Sí</option>
             <option value="NO">No</option>
           </select>
@@ -181,18 +194,15 @@
         </div>
         <div class="col-md-6">
           <label for="telefono" class="form-label">Número de teléfono</label>
-          <br />
-          <p-inputMask mask="999-9999" formControlName="telefono" placeholder="999-9999"></p-inputMask>
+          <input formControlName="telefono" type="text" minlength="7" maxlength="10" class="form-control"/>
         </div>
         <div class="col-md-6">
           <label for="celular" class="form-label">Número de celular</label>
-          <br />
-          <p-inputMask mask="999-999-9999" formControlName="celular" placeholder="999-999-9999"></p-inputMask>
+          <input formControlName="celular" type="text" minlength="7" maxlength="10" class="form-control"/>
         </div>
         <div class="col-md-6">
           <label for="telefonoOficina" class="form-label">Número de teléfono de oficina</label>
-          <br />
-          <p-inputMask mask="999-999-9999" formControlName="telefonoOficina" placeholder="999-999-9999"></p-inputMask>
+          <input formControlName="telefonoOficina" type="text" minlength="7" maxlength="10" class="form-control"/>
         </div>
       </div>
     </div>
@@ -204,6 +214,7 @@
         <div class="col-md-6">
           <label for="idNivelEducativo" class="form-label">Nivel de educación</label>
           <select class="form-select" formControlName="idNivelEducativo">
+            <option value="" selected>Seleccione...</option>
             <option *ngFor="let type of educationLevels" [value]="type.id">
               {{ type.nombre }}
             </option>
@@ -220,6 +231,7 @@
         <div class="col-md-6">
           <label for="idEmpresaLabor" class="form-label">Empresa donde labora</label>
           <select class="form-select" formControlName="idEmpresaLabor">
+            <option value="" selected>Seleccione...</option>
             <option *ngFor="let type of companies" [value]="type.id">
               {{ type.nombre }}
             </option>
@@ -228,6 +240,7 @@
         <div class="col-md-6">
           <label for="idTipoContrato" class="form-label">Tipo de contrato</label>
           <select class="form-select" formControlName="idTipoContrato">
+            <option value="" selected>Seleccione...</option>
             <option *ngFor="let type of contractTypes" [value]="type.id">
               {{ type.nombre }}
             </option>
