Add new field to natural person component

--- a/front/src/app/components/private/user/components/user-info/components/financial-info/financial-info.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/financial-info/financial-info.component.html
@@ -23,8 +23,7 @@
       <br>
       <p-inputNumber 
         formControlName="ingresosMensuales"
-        inputId="integeronly"
-             
+        inputId="currency-co"   
             mode="currency" 
             currency="COP" 
             locale="es-CO" /> 
