--- a/front/src/app/components/private/user/components/user-info/components/natural-person/natural-person.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/natural-person/natural-person.component.html
@@ -255,6 +255,10 @@
           <input formControlName="cargoOcupa" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
+          <label for="jefeInmediato" class="form-label">Cargo que ocupa</label>
+          <input formControlName="jefeInmediato" type="text" class="form-control" />
+        </div>
+        <div class="col-md-6">
           <label for="aniosAntigEmpresa" class="form-label">Años de antigüedad en la empresa</label>
           <input formControlName="aniosAntigEmpresa" type="number" class="form-control" />
         </div>
