--- a/front/src/app/components/private/admin/components/credit-requests/credit-requests.component.html
+++ b/front/src/app/components/private/admin/components/credit-requests/credit-requests.component.html
@@ -1,11 +1,11 @@
 <div class="container mt-5">
   <div class="row mb-3">
     <div class="col">
-      <input type="text" pInputText placeholder="Buscar" [(ngModel)]="searchQuery" (ngModelChange)="onSearch()" class="form-control">
+      <input type="text" placeholder="Buscar" [(ngModel)]="searchQuery" (ngModelChange)="onSearch()" class="form-control">
     </div>
   </div>
-  <p-table [value]="creditRequests" [paginator]="true" [rows]="10" [totalRecords]="totalRecords" (onPage)="onPageChange($event)" [loading]="loading">
-    <ng-template pTemplate="header">
+  <table class="table">
+    <thead>
       <tr>
         <th>Id</th>
         <th>Número de Documento</th>
@@ -19,9 +19,9 @@
         <th>Fecha de Solicitud</th>
         <th>Acciones</th>
       </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-request>
-      <tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let request of creditRequests">
         <td>{{ request.id }}</td>
         <td>{{ request.numeroDocumento }}</td>
         <td>{{ request.montoSolicitado }}</td>
@@ -46,9 +46,24 @@
           ></app-generate-credit-request>
         </td>
       </tr>
-    </ng-template>
-    <ng-template pTemplate="paginatorleft" let-state>
-      <p-paginator [rows]="state.rows" [totalRecords]="totalRecords" (onPageChange)="onPageChange($event)"></p-paginator>
-    </ng-template>
-  </p-table>
+    </tbody>
+  </table>
+
+  <nav aria-label="Page navigation example" *ngIf="totalRecords > rows">
+    <ul class="pagination justify-content-center">
+      <li class="page-item" [class.disabled]="currentPage === 1">
+        <a class="page-link" (click)="onPageChange(currentPage - 1)" aria-label="Previous">
+          <span aria-hidden="true">&laquo;</span>
+        </a>
+      </li>
+      <li class="page-item" *ngFor="let page of pages" [class.active]="currentPage === page">
+        <a class="page-link" (click)="onPageChange(page)">{{ page }}</a>
+      </li>
+      <li class="page-item" [class.disabled]="currentPage === totalPages">
+        <a class="page-link" (click)="onPageChange(currentPage + 1)" aria-label="Next">
+          <span aria-hidden="true">&raquo;</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
 </div>
