--- a/front/src/app/components/private/admin/components/credit-requests/credit-requests.component.html
+++ b/front/src/app/components/private/admin/components/credit-requests/credit-requests.component.html
@@ -4,7 +4,7 @@
       <input type="text" placeholder="Buscar" [(ngModel)]="searchQuery" (ngModelChange)="onSearch()" class="form-control">
     </div>
   </div>
-  <table class="table">
+  <table class="table table-bordered">
     <thead>
       <tr>
         <th>Id</th>
@@ -52,15 +52,15 @@
   <nav aria-label="Page navigation example" *ngIf="totalRecords > rows">
     <ul class="pagination justify-content-center">
       <li class="page-item" [class.disabled]="currentPage === 1">
-        <a class="page-link" (click)="onPageChange(currentPage - 1)" aria-label="Previous">
+        <a class="page-link" (click)="onPageChange(currentPage - 1)" aria-label="Previous" style="cursor: pointer;">
           <span aria-hidden="true">&laquo;</span>
         </a>
       </li>
       <li class="page-item" *ngFor="let page of pages" [class.active]="currentPage === page">
-        <a class="page-link" (click)="onPageChange(page)">{{ page }}</a>
+        <a class="page-link" (click)="onPageChange(page)" style="cursor: pointer;">{{ page }}</a>
       </li>
       <li class="page-item" [class.disabled]="currentPage === totalPages">
-        <a class="page-link" (click)="onPageChange(currentPage + 1)" aria-label="Next">
+        <a class="page-link" (click)="onPageChange(currentPage + 1)" aria-label="Next" style="cursor: pointer;">
           <span aria-hidden="true">&raquo;</span>
         </a>
       </li>
