--- a/front/src/app/components/private/admin/components/credit-requests/credit-requests.component.html
+++ b/front/src/app/components/private/admin/components/credit-requests/credit-requests.component.html
@@ -1,7 +1,8 @@
 <div class="container mt-5">
   <div class="row mb-3">
     <div class="col">
-      <input type="text" placeholder="Buscar" [(ngModel)]="searchQuery" (ngModelChange)="onSearch()" class="form-control">
+      <h2 class="text-center">Solicitudes de credito</h2>
+      <!-- <input type="text" placeholder="Buscar" [(ngModel)]="searchQuery" (ngModelChange)="onSearch()" class="form-control"> -->
     </div>
   </div>
   <table class="table table-bordered">
