Update admin welcome

--- a/front/src/app/components/private/admin/components/admin-welcome/admin-welcome.component.html
+++ b/front/src/app/components/private/admin/components/admin-welcome/admin-welcome.component.html
@@ -1,2 +1,13 @@
-<p>admin-welcome works!</p>
-<app-generate-credit-request></app-generate-credit-request>
+<div class="container mt-5">
+    <div class="card">
+        <div class="card-header text-center">
+            Solicitudes de credito
+        </div>
+        <div class="card-body">
+            <h5 class="card-title text-center">Ver todas las solicitudes</h5>
+            <div class="credit-button">
+                <a routerLink="/auth/admin/credits" class="btn btn-primary">Ver creditos</a>
+            </div>
+        </div>
+    </div>
+</div>
