--- a/front/src/app/components/private/user/components/user-info/components/family-information/family-information.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/family-information/family-information.component.html
@@ -31,7 +31,7 @@
         <th pSortableColumn="parentesco" style="width: 20%">
           Parentesco <p-sortIcon field="parentesco" />
         </th>
-        <th pSortableColumn="idGenero" style="width: 20%">
+        <!--<th pSortableColumn="idGenero" style="width: 20%">
           Género <p-sortIcon field="idGenero" />
         </th>
         <th pSortableColumn="fechaNacimiento" style="width: 20%">
@@ -39,7 +39,7 @@
         </th>
         <th pSortableColumn="idNivelEducativo" style="width: 20%">
           Nivel Educ. <p-sortIcon field="idNivelEducativo" />
-        </th>
+        </th>-->
         <th pSortableColumn="trabaja" style="width: 20%">
           Trabaja <p-sortIcon field="trabaja" />
         </th>
@@ -56,9 +56,9 @@
         <td>{{ familiar.numeroDocumento }}</td>
         <td>{{ familiar.idMpioExpDoc }}</td>
         <td>{{ familiar.parentesco }}</td>
-        <td>{{ familiar.idGenero }}</td>
+        <!--<td>{{ familiar.idGenero }}</td>
         <td>{{ familiar.fechaNacimiento }}</td>
-        <td>{{ familiar.idNivelEducativo }}</td>
+        <td>{{ familiar.idNivelEducativo }}</td>-->
         <td>{{ familiar.trabaja }}</td>
         <td>{{ familiar.celular }}</td>
         <td>
@@ -95,7 +95,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Información de familiar</h1>
           <button
             type="button"
             class="btn-close"
