--- a/front/src/app/components/private/user/components/user-info/components/natural-person/natural-person.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/natural-person/natural-person.component.html
@@ -255,17 +255,17 @@
           <input formControlName="cargoOcupa" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="jefeInmediato" class="form-label">Cargo que ocupa</label>
+          <label for="jefeInmediato" class="form-label">Nombre del jefe inmediato</label>
           <input formControlName="jefeInmediato" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
           <label for="aniosAntigEmpresa" class="form-label">Años de antigüedad en la empresa</label>
           <input formControlName="aniosAntigEmpresa" type="number" class="form-control" />
         </div>
-        <div class="col-md-6">
+        <!--<div class="col-md-6">
           <label for="mesesAntigEmpresa" class="form-label">Meses de antigüedad en la empresa</label>
           <input formControlName="mesesAntigEmpresa" type="number" class="form-control" />
-        </div>
+        </div>-->
         <div class="col-md-6">
           <label for="mesSaleVacaciones" class="form-label">Mes en el que sale a vacaciones</label>
           <input formControlName="mesSaleVacaciones" type="text" class="form-control" />
