--- a/front/src/app/components/private/components/sidebar/sidebar.component.html
+++ b/front/src/app/components/private/components/sidebar/sidebar.component.html
@@ -40,7 +40,7 @@
               </ul>
             </div>
           </li>
-          <li class="mb-1" *ngIf="userRole === 2">
+          <!-- <li class="mb-1" *ngIf="userRole === 2">
             <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#saving-collapse" aria-expanded="false">
               Ahorros
             </button>
@@ -50,7 +50,7 @@
                 <li><a routerLink="/auth/user/savings" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Mis Ahorros</a></li>
               </ul>
             </div>
-          </li>
+          </li> -->
           <li class="mb-1" *ngIf="userRole === 2">
             <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#credit-collapse" aria-expanded="false">
               Creditos
@@ -58,7 +58,7 @@
             <div class="collapse" id="credit-collapse">
               <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                 <li><a routerLink="/auth/user/request/credit" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Solicitar</a></li>
-                <li><a routerLink="/auth/user/credits" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Mis Creditos</a></li>
+                <!-- <li><a routerLink="/auth/user/credits" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Mis Creditos</a></li> -->
               </ul>
             </div>
           </li>
