--- a/front/src/app/components/private/welcome/welcome.component.html
+++ b/front/src/app/components/private/welcome/welcome.component.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-3">
+        <!-- <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-3">
             <div class="card shadow text-center h-100">
                 <div class="card-header">
                     Servicios de ahorro
@@ -27,7 +27,7 @@
                     <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/savings">Mi historial</a>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-3">
             <div class="card shadow text-center h-100">
                 <div class="card-header">
@@ -36,7 +36,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Conoce los servicios de credito</h5>
                     <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/request/credit">Solicitalo aquí</a>
-                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/credits">Mi historial</a>
+                    <!-- <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/credits">Mi historial</a> -->
                 </div>
             </div>
         </div>
