--- a/front/src/app/components/private/components/sidebar/sidebar.component.css
+++ b/front/src/app/components/private/components/sidebar/sidebar.component.css
@@ -2,13 +2,27 @@
   background-color: rgba(250, 182, 0, 0.5);
 }
 
+#sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh; 
+  overflow-y: auto;
+  background-color: rgba(250, 182, 0, 0.5);
+}
+
 main {
-  display: flex;
-  flex-direction: row;
+  margin-left: 20%;
   height: 100vh;
   overflow-x: hidden;
   overflow-y: auto;
-  background-color: rgba(250, 182, 0, 0.5);
+}
+
+.offcanvas-body {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  height: 100%;
 }
 
 .dropdown-toggle { outline: 0; }
@@ -93,15 +107,6 @@ main {
   box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
 }
 
-.b-example-vr {
-  flex-shrink: 0;
-  width: 1.5rem;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, .1);
-  border-left: solid rgba(0, 0, 0, .15);
-  border-width: 0 0 0 1px;
-}
-
 .bi {
   vertical-align: -.125em;
   fill: currentColor;
@@ -158,13 +163,6 @@ main {
   .b-example-vr {
     display: none;
   }
-}
-
-.offcanvas-body {
-  display: flex;
-  flex-direction: column;
-  padding: 0;
-  height: 100%;
 }
 
 @media (max-width: 768px) {
