--- a/front/src/app/components/private/components/sidebar/sidebar.component.html
+++ b/front/src/app/components/private/components/sidebar/sidebar.component.html
@@ -1,76 +1,143 @@
-<button class="btn btn-primary d-xl-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">Toggle offcanvas</button>
+<!-- Botón para togglear el menú en dispositivos móviles -->
+<button class="btn btn-primary d-xl-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive"
+  aria-controls="offcanvasResponsive">Toggle offcanvas</button>
 
-<div class="offcanvas-xl offcanvas-end" tabindex="-1" id="offcanvasResponsive" aria-labelledby="offcanvasResponsiveLabel">
+<!-- Menú offcanvas para móviles -->
+<div class="offcanvas offcanvas-start d-xl-none" tabindex="-1" id="offcanvasResponsive"
+  aria-labelledby="offcanvasResponsiveLabel">
   <div class="offcanvas-header">
     <h5 class="offcanvas-title" id="offcanvasResponsiveLabel">Menú</h5>
-    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#offcanvasResponsive" aria-label="Close"></button>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
-    <main class="d-flex flex-nowrap" style="height: 100%;">
-      <div id="sidebar" class="flex-shrink-0 p-3" style="width: 15%;">
-        <a [routerLink]="userRole === 1 ? '/auth/admin' : '/auth/user'" class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
-          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="24" fill="currentColor" class="bi bi-person-fill-gear" viewBox="0 0 16 16">
-            <path d="M11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0m-9 8c0 1 1 1 1 1h5.256A4.5 4.5 0 0 1 8 12.5a4.5 4.5 0 0 1 1.544-3.393Q8.844 9.002 8 9c-5 0-6 3-6 4m9.886-3.54c.18-.613 1.048-.613 1.229 0l.043.148a.64.64 0 0 0 .921.382l.136-.074c.561-.306 1.175.308.87.869l-.075.136a.64.64 0 0 0 .382.92l.149.045c.612.18.612 1.048 0 1.229l-.15.043a.64.64 0 0 0-.38.921l.074.136c.305.561-.309 1.175-.87.87l-.136-.075a.64.64 0 0 0-.92.382l-.045.149c-.18.612-1.048.612-1.229 0l-.043-.15a.64.64 0 0 0-.921-.38l-.136.074c-.561.305-1.175-.309-.87-.87l.075-.136a.64.64 0 0 0-.382-.92l-.148-.045c-.613-.18-.613-1.048 0-1.229l.148-.043a.64.64 0 0 0 .382-.921l-.074-.136c-.306-.561.308-1.175.869-.87l.136.075a.64.64 0 0 0 .92-.382zM14 12.5a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0"/>
-          </svg>
-          <span class="fs-5 fw-semibold text-center">{{ userRole === 1 ? 'Panel de administrador' : 'Panel de usuario' }}</span>
-        </a>
-        <ul class="list-unstyled ps-0">
-          <!-- SIDEBAR DE ADMINISTRADOR -->
-          <li class="mb-1" *ngIf="userRole === 1">
-            <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#admin-collapse" aria-expanded="false">
-              Admin Menu
-            </button>
-            <div class="collapse" id="admin-collapse">
-              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                <li><a routerLink="/auth/admin" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Dashboard</a></li>
-              </ul>
-              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                <li><a routerLink="/auth/admin/credits" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Credits</a></li>
-              </ul>
-            </div>
-          </li>
-          <!-- SIDEBAR DE USUARIO -->
-          <li class="mb-1" *ngIf="userRole === 2">
-            <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#user-collapse" aria-expanded="false">
-              Mi Perfil
-            </button>
-            <div class="collapse" id="user-collapse">
-              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                <li><a routerLink="/auth/user/information" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Información</a></li>
-              </ul>
-            </div>
-          </li>
-          <!-- <li class="mb-1" *ngIf="userRole === 2">
-            <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#saving-collapse" aria-expanded="false">
-              Ahorros
-            </button>
-            <div class="collapse" id="saving-collapse">
-              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                <li><a routerLink="/auth/user/request/saving" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Solicitar</a></li>
-                <li><a routerLink="/auth/user/savings" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Mis Ahorros</a></li>
-              </ul>
-            </div>
-          </li> -->
-          <li class="mb-1" *ngIf="userRole === 2">
-            <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#credit-collapse" aria-expanded="false">
-              Creditos
-            </button>
-            <div class="collapse" id="credit-collapse">
-              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                <li><a routerLink="/auth/user/request/credit" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Solicitar</a></li>
-                <!-- <li><a routerLink="/auth/user/credits" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Mis Creditos</a></li> -->
-              </ul>
-            </div>
-          </li>
-        </ul>
-        <div class="mt-auto">
-          <button class="btn btn-danger w-100 mt-3" data-bs-toggle="modal" data-bs-target="#logoutModal">Cerrar Sesión</button>
-        </div>
+    <div id="sidebar" class="flex-shrink-0 p-3">
+      <a [routerLink]="userRole === 1 ? '/auth/admin' : '/auth/user'"
+        class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
+        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="24" fill="currentColor"
+          class="bi bi-person-fill-gear" viewBox="0 0 16 16">
+          <path
+            d="M11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0m-9 8c0 1 1 1 1 1h5.256A4.5 4.5 0 0 1 8 12.5a4.5 4.5 0 0 1 1.544-3.393Q8.844 9.002 8 9c-5 0-6 3-6 4m9.886-3.54c.18-.613 1.048-.613 1.229 0l.043.148a.64.64 0 0 0 .921.382l.136-.074c.561-.306 1.175.308.87.869l-.075.136a.64.64 0 0 0 .382.92l.149.045c.612.18.612 1.048 0 1.229l-.15.043a.64.64 0 0 0-.38.921l.074.136c.305.561-.309 1.175-.87.87l-.136-.075a.64.64 0 0 0-.92.382l-.045.149c-.18.612-1.048.612-1.229 0l-.043-.15a.64.64 0 0 0-.921-.38l-.136.074c-.561.305-1.175-.309-.87-.87l.075-.136a.64.64 0 0 0-.382-.92l-.148-.045c-.613-.18-.613-1.048 0-1.229l.148-.043a.64.64 0 0 0 .382-.921l-.074-.136c-.306-.561.308-1.175.869-.87l.136.075a.64.64 0 0 0 .92-.382zM14 12.5a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0" />
+        </svg>
+        <span class="fs-5 fw-semibold text-center">{{ userRole === 1 ? 'Panel de administrador' : 'Panel de usuario'
+          }}</span>
+      </a>
+      <ul class="list-unstyled ps-0">
+        <!-- SIDEBAR DE ADMINISTRADOR -->
+        <li class="mb-1" *ngIf="userRole === 1">
+          <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
+            data-bs-toggle="collapse" data-bs-target="#admin-collapse" aria-expanded="false">
+            Admin Menu
+          </button>
+          <div class="collapse" id="admin-collapse">
+            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+              <li><a routerLink="/auth/admin"
+                  class="link-body-emphasis d-inline-flex text-decoration-none rounded">Dashboard</a></li>
+            </ul>
+            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+              <li><a routerLink="/auth/admin/credits"
+                  class="link-body-emphasis d-inline-flex text-decoration-none rounded">Credits</a></li>
+            </ul>
+          </div>
+        </li>
+        <!-- SIDEBAR DE USUARIO -->
+        <li class="mb-1" *ngIf="userRole === 2">
+          <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
+            data-bs-toggle="collapse" data-bs-target="#user-collapse" aria-expanded="false">
+            Mi Perfil
+          </button>
+          <div class="collapse" id="user-collapse">
+            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+              <li><a routerLink="/auth/user/information"
+                  class="link-body-emphasis d-inline-flex text-decoration-none rounded">Información</a></li>
+            </ul>
+          </div>
+        </li>
+        <li class="mb-1" *ngIf="userRole === 2">
+          <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
+            data-bs-toggle="collapse" data-bs-target="#credit-collapse" aria-expanded="false">
+            Creditos
+          </button>
+          <div class="collapse" id="credit-collapse">
+            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+              <li><a routerLink="/auth/user/request/credit"
+                  class="link-body-emphasis d-inline-flex text-decoration-none rounded">Solicitar</a></li>
+            </ul>
+          </div>
+        </li>
+      </ul>
+      <div class="mt-auto">
+        <button class="btn btn-danger w-100 mt-3" data-bs-toggle="modal" data-bs-target="#logoutModal">Cerrar
+          Sesión</button>
       </div>
-      <div class="b-example-vr"></div>
-    </main>
+    </div>
   </div>
 </div>
+
+<!-- Sidebar fijo para escritorio -->
+<div id="sidebar" class="d-none d-xl-block flex-shrink-0 p-3">
+  <a [routerLink]="userRole === 1 ? '/auth/admin' : '/auth/user'"
+    class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
+    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="24" fill="currentColor" class="bi bi-person-fill-gear"
+      viewBox="0 0 16 16">
+      <path
+        d="M11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0m-9 8c0 1 1 1 1 1h5.256A4.5 4.5 0 0 1 8 12.5a4.5 4.5 0 0 1 1.544-3.393Q8.844 9.002 8 9c-5 0-6 3-6 4m9.886-3.54c.18-.613 1.048-.613 1.229 0l.043.148a.64.64 0 0 0 .921.382l.136-.074c.561-.306 1.175.308.87.869l-.075.136a.64.64 0 0 0 .382.92l.149.045c.612.18.612 1.048 0 1.229l-.15.043a.64.64 0 0 0-.38.921l.074.136c.305.561-.309 1.175-.87.87l-.136-.075a.64.64 0 0 0-.92.382l-.045.149c-.18.612-1.048.612-1.229 0l-.043-.15a.64.64 0 0 0-.921-.38l-.136.074c-.561.305-1.175-.309-.87-.87l.075-.136a.64.64 0 0 0-.382-.92l-.148-.045c-.613-.18-.613-1.048 0-1.229l.148-.043a.64.64 0 0 0 .382-.921l-.074-.136c-.306-.561.308-1.175.869-.87l.136.075a.64.64 0 0 0 .92-.382zM14 12.5a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0" />
+    </svg>
+    <span class="fs-5 fw-semibold text-center">{{ userRole === 1 ? 'Panel de administrador' : 'Panel de usuario'
+      }}</span>
+  </a>
+  <ul class="list-unstyled ps-0">
+    <!-- SIDEBAR DE ADMINISTRADOR -->
+    <li class="mb-1" *ngIf="userRole === 1">
+      <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
+        data-bs-toggle="collapse" data-bs-target="#admin-collapse" aria-expanded="false">
+        Admin Menu
+      </button>
+      <div class="collapse" id="admin-collapse">
+        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <li><a routerLink="/auth/admin"
+              class="link-body-emphasis d-inline-flex text-decoration-none rounded">Dashboard</a></li>
+        </ul>
+        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <li><a routerLink="/auth/admin/credits"
+              class="link-body-emphasis d-inline-flex text-decoration-none rounded">Credits</a></li>
+        </ul>
+      </div>
+    </li>
+    <!-- SIDEBAR DE USUARIO -->
+    <li class="mb-1" *ngIf="userRole === 2">
+      <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
+        data-bs-toggle="collapse" data-bs-target="#user-collapse" aria-expanded="false">
+        Mi Perfil
+      </button>
+      <div class="collapse" id="user-collapse">
+        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <li><a routerLink="/auth/user/information"
+              class="link-body-emphasis d-inline-flex text-decoration-none rounded">Información</a></li>
+        </ul>
+      </div>
+    </li>
+    <li class="mb-1" *ngIf="userRole === 2">
+      <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
+        data-bs-toggle="collapse" data-bs-target="#credit-collapse" aria-expanded="false">
+        Creditos
+      </button>
+      <div class="collapse" id="credit-collapse">
+        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <li><a routerLink="/auth/user/request/credit"
+              class="link-body-emphasis d-inline-flex text-decoration-none rounded">Solicitar</a></li>
+        </ul>
+      </div>
+    </li>
+  </ul>
+  <div class="mt-auto">
+    <button class="btn btn-danger w-100 mt-3" data-bs-toggle="modal" data-bs-target="#logoutModal">Cerrar
+      Sesión</button>
+  </div>
+</div>
+
+<main class="d-flex flex-nowrap" style="height: 100%;">
+  <div class="b-example-vr d-none d-xl-block"></div>
+</main>
 
 <!-- Modal -->
 <div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
