Rename sidebar button name

--- a/front/src/app/components/private/components/sidebar/sidebar.component.html
+++ b/front/src/app/components/private/components/sidebar/sidebar.component.html
@@ -1,6 +1,4 @@
-<!-- Botón para togglear el menú en dispositivos móviles -->
-<button class="btn btn-primary d-xl-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive"
-  aria-controls="offcanvasResponsive">Toggle offcanvas</button>
+<button class="btn btn-primary d-xl-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">Menú</button>
 
 <!-- Menú offcanvas para móviles -->
 <div class="offcanvas offcanvas-start d-xl-none" tabindex="-1" id="offcanvasResponsive"
