--- a/front/src/app/components/private/user/components/user-info/components/recommendation/recommendation.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/recommendation/recommendation.component.html
@@ -136,8 +136,8 @@
                 </select>
               </div>
               <div class="col-md-6">
-                <label for="departamento" class="form-label">Departamento de residencia</label>
-                <select class="form-select" id="departamento" formControlName="departamento" (change)="onDepartmentChange()">
+                <label for="idDpto" class="form-label">Departamento de residencia</label>
+                <select class="form-select" id="idDpto" formControlName="idDpto" (change)="onDepartmentChange()">
                   <option value="" selected>Seleccione...</option>
                   <option *ngFor="let department of departments" [value]="department.id">
                     {{ department.nombre }}
