--- a/front/src/app/components/public/login/login.component.html
+++ b/front/src/app/components/public/login/login.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 <div class="container mt-5">
   <div class="d-flex justify-content-center">
     <div class="card shadow mb-3" style="max-width: 600px;">
