Fix data type model

--- a/front/src/app/components/private/user/components/user-info/components/natural-person/natural-person.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/natural-person/natural-person.component.html
@@ -287,7 +287,7 @@
         </div>
         <div class="col-md-6">
           <label for="numeroCelularEmergencia" class="form-label">Número de celular</label>
-          <input formControlName="numeroCelularEmergencia" type="text" class="form-control" />
+          <input formControlName="numeroCelularEmergencia" type="text" minlength="7" maxlength="10" class="form-control" />
         </div>
       </div>
     </div>
