Update request credit

--- a/front/src/app/components/private/admin/components/credit-requests/credit-requests.component.html
+++ b/front/src/app/components/private/admin/components/credit-requests/credit-requests.component.html
@@ -44,6 +44,7 @@
             [periocidadPago]="request.periocidadPago"
             [tasaInteres]="request.tasaInteres"
             [userId]="request.idUsuario"
+            [idSolicitudCredito]="request.id"
           ></app-generate-credit-request>
         </td>
       </tr>
